--- a/platformio.ini
+++ b/platformio.ini
@@ -18,3 +18,8 @@ lib_deps =
 	majicdesigns/MD_Parola@^3.7.1
 	jsware/AbleButtons@^0.3.0
 	contrem/arduino-timer@^3.0.1
+	khoih-prog/ESPAsync_WiFiManager@^1.15.1
+	ESP8266WiFi
+	devyte/ESPAsyncDNSServer@^1.0.0
+	me-no-dev/ESPAsyncUDP@0.0.0-alpha+sha.697c75a025
+	arduino-libraries/NTPClient@^3.2.1
